# CrewAI-Training

./: .env.example  .gitignore  AGENTS.md  CHECKLIST.md  README.md  frontend-funcional-spec.md  pyproject.toml
.cursor/agents/: design-reviewer.md  ui-designer.md  ux-designer.md
data/fixtures/: sample_ticket.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  types.ts
frontend/src/services/: apiCrewService.ts  stubCrewService.ts
frontend/src/test/: setup.ts
knowledge_base/: support_kb.md
project-context/1.define/: mrd.md  prd.md  sad.md
project-context/2.build/: backend.md  frontend.md  integration.md  observability.md  qa.md  sad.md
src/customer_support_crew/: __init__.py  api.py  crew.py  crewai_flow.py  crewai_main.py  flow.py  main.py  models.py  run_store.py  runtime.py
src/customer_support_crew/config/: agents.yaml  tasks.yaml
src/customer_support_crew/tools/: __init__.py  crewai_local_knowledge_tool.py  local_knowledge_tool.py
tests/: test_api_observability.py  test_crewai_paths.py  test_flow.py
