[project]
name = "aamad-crewai-capstone"
version = "0.1.0"
description = "AAMAD CrewAI capstone: Multi-Agent Customer Support Crew"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
crewai = [
    "crewai>=0.95",
]

[project.scripts]
support-crew-demo = "customer_support_crew.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
