[project]
name = "aamad-crewai-capstone"
version = "0.1.0"
description = "AAMAD CrewAI capstone: Multi-Agent Customer Support Crew"
requires-python = ">=3.10,<3.14"
dependencies = [
    "pydantic>=2.13",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
crewai = [
    "crewai>=0.95",
]

[project.scripts]
support-crew-demo = "customer_support_crew.main:main"
run_crew = "customer_support_crew.crewai_main:main"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/customer_support_crew"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
